idea/testData/multiModuleLineMarker/fromActualPrimaryConstructor/jvm/jvm.kt
actual class <!LINE_MARKER("descr='Has declaration in common module'")!>NoConstructor2<!>(name: String) {
    val myName = name
    actual fun <!LINE_MARKER("descr='Has declaration in common module'")!>extraFun<!>() {}
}

